[package]
name = "rangle"
description = "An Org-Tangle alternative"
author = "Jobin Nelson"
repository = "https://github.com/jobin-nelson/rangle"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
